建立資料庫連線  設置EF Core Context
設置EF Core Context
於Program註冊DbContext，並設定使用SQL Server資料庫

--- a/InterViewProject/appsettings.Development.json
+++ b/InterViewProject/appsettings.Development.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -12,11 +12,14 @@
       {
         "Name": "File",
         "Args": {
-          "path": "./logs/log-.txt",
-          "rollingInterval": "Day"
+          "path": "./logs/log-.txt", //Log寫入TXT檔案
+          "rollingInterval": "Day" //Log檔案為一天一個
         }
       }
     ]
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.;Initial Catalog=Coffee;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   },
   "AllowedHosts": "*"
 }
