--- a/InterViewProject/appsettings.json
+++ b/InterViewProject/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
@@ -12,11 +12,14 @@
       {
         "Name": "File",
         "Args": {
-          "path": "./logs/log-.txt",//Log寫入TXT檔案
+          "path": "./logs/log-.txt", //Log寫入TXT檔案
           "rollingInterval": "Day" //Log檔案為一天一個
         }
       }
     ]
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "請填寫正式環境連線字串"
   },
   "AllowedHosts": "*"
 }
