將商品詳細資訊建立成 View 加入Repository 設計模式
將商品詳細資訊建立成 View 加入Repository 設計模式
建立IProductListRepository介面
實作ProductListRepositoryService

--- a/InterViewProject/efpt.config.json
+++ b/InterViewProject/efpt.config.json
@@ -50,6 +50,10 @@
       {
          "Name": "[dbo].[Products]",
          "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[ProductListView]",
+         "ObjectType": 3
       }
    ],
    "UiHint": null,
