完成新增產品功能
完成新增產品功能

--- a/InterViewProject/efpt.config.json
+++ b/InterViewProject/efpt.config.json
@@ -36,19 +36,15 @@
          "ObjectType": 0
       },
       {
-         "Name": "[dbo].[Package]",
-         "ObjectType": 0
-      },
-      {
-         "Name": "[dbo].[Photos]",
-         "ObjectType": 0
-      },
-      {
          "Name": "[dbo].[Process]",
          "ObjectType": 0
       },
       {
          "Name": "[dbo].[Products]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[Roasting]",
          "ObjectType": 0
       },
       {
