完成JWT 登陸驗證功能
完成JWT 登陸驗證功能

--- a/InterViewProject/appsettings.Development.json
+++ b/InterViewProject/appsettings.Development.json
@@ -21,5 +21,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=Coffee;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
   },
+  "SecretKey": "A9f$2kL!8zQw@1xT7pVb#6sD3eRj^0mN5uYl*4cH",
   "AllowedHosts": "*"
 }
